# fcgi-2.4.1-win

./: CMakeLists.txt  README.md
include/: fcgi_stdio.h  fcgiapp.h  fcgios.h
libfcgi/: fcgi_stdio.c  fcgiapp.c  fcgio.cpp  os_win32.c
